feat: implements fetch polls
